--- a/2.4/Dockerfile
+++ b/2.4/Dockerfile
@@ -33,7 +33,7 @@ RUN wget "http://downloads.xiph.org/releases/icecast/icecast-$ICECAST_VERSION.ta
   && rm -r "icecast-$ICECAST_VERSION"
 
 # Configure Icecast user
-# RUN adduser --disabled-password --gecos '' icecast2
+RUN adduser --disabled-password --gecos '' icecast2
 
 # Copy files into container
 COPY docker-entrypoint.sh /
