Fixed wrong command

--- a/2.4/Dockerfile
+++ b/2.4/Dockerfile
@@ -43,4 +43,4 @@ RUN chmod +x /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
 # Launch Icecast
-CMD ["icecast2", "-c", "/etc/icecast2/icecast.xml"]
+CMD ["icecast", "-c", "/etc/icecast2/icecast.xml"]
